# wl-screenshare

./: README.md
application/wl-screenshare-app/: .gitignore  .project  settings.gradle
application/wl-screenshare-app/app/: .project  build.gradle
application/wl-screenshare-app/app/src/androidTest/java/com/rovand/wiredmon/: ExampleInstrumentedTest.java
application/wl-screenshare-app/app/src/main/: AndroidManifest.xml
application/wl-screenshare-app/app/src/main/java/com/rovand/wiredmon/: ConnectedActivity.java  MainActivity.java
application/wl-screenshare-app/app/src/main/java/com/rovand/wiredmon/webusb/: ShareScreenActivity.java
application/wl-screenshare-app/app/src/main/res/layout/: activity_main.xml  web_usb_chat_layout.xml
application/wl-screenshare-app/app/src/main/res/values/: strings.xml  themes.xml
application/wl-screenshare-app/app/src/main/res/values-night/: themes.xml
application/wl-screenshare-app/app/src/main/res/values-v23/: themes.xml
application/wl-screenshare-app/app/src/main/res/xml/: accessory_filter.xml  accessory_web_usb_filter.xml
application/wl-screenshare-app/app/src/test/java/com/rovand/wiredmon/: ExampleUnitTest.java
application/wl-screenshare-app/gradle/wrapper/: gradle-wrapper.properties
server/gpu-screen-recorder/: .gitignore  README.md  TODO  install.sh  meson.build  meson_options.txt  project.conf  uninstall.sh
server/gpu-screen-recorder/extra/: gpu-screen-recorder.env  gpu-screen-recorder.service  meson_post_install.sh
server/gpu-screen-recorder/include/: color_conversion.h  cuda.h  cursor.h  damage.h  dbus.h  defs.h  egl.h  library_loader.h  overclock.h  pipewire.h  shader.h  sound.hpp  utils.h  vec2.h  window_texture.h  xnvctrl.h
server/gpu-screen-recorder/include/capture/: capture.h  kms.h  nvfbc.h  portal.h  xcomposite.h
server/gpu-screen-recorder/include/encoder/video/: cuda.h  software.h  vaapi.h  video.h
server/gpu-screen-recorder/kms/: kms_shared.h
server/gpu-screen-recorder/kms/client/: kms_client.c  kms_client.h
server/gpu-screen-recorder/kms/server/: .gitignore  kms_server.c  project.conf
server/gpu-screen-recorder/scripts/: interactive.sh  record-application-name.sh  record-save-application-name.sh  replay-application-name.sh  save-recording.sh  start-recording.sh  start-replay.sh  start-stop-recording.sh  toggle-recording-selected.sh  twitch-stream-local-copy.sh  twitch-stream.sh  youtube-hls-stream.sh
server/gpu-screen-recorder/src/: color_conversion.c  cuda.c  cursor.c  damage.c  dbus.c  egl.c  library_loader.c  main.cpp  overclock.c  pipewire.c  server.cpp  shader.c  sound.cpp  utils.c  window_texture.c  xnvctrl.c
server/gpu-screen-recorder/src/capture/: capture.c  kms.c  nvfbc.c  portal.c  xcomposite.c
server/gpu-screen-recorder/src/encoder/video/: cuda.c  software.c  vaapi.c  video.c
server/gpu-screen-recorder/study/: create_matrix.py
server/wf-recorder/: meson.build
server/wf-recorder/src/: frame-writer.cpp  server.hpp
server/wl-screenshare-server/: meson.build  run.sh
server/wl-screenshare-server/src/: atomic_queue.hpp  frame-writer.cpp  frame-writer.hpp  main.cpp  wl_registry.cpp  wl_registry.hpp  xdg_output.cpp  xdg_output.hpp  zwlr_screencopy.cpp  zwlr_screencopy.hpp  zwp_linux_buffer.cpp  zwp_linux_buffer.hpp
